--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Document</title>
+ <link rel="stylesheet" href="./css/style.css">
+ <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
- 
+ <nav>Navbar</nav>
+ <section>Search bar</section>
+ <main class="container">
+  <!-- <div class="job-card">
+   <div class="job-card__img">
+    <img src="./assets/desktop/Group1.svg" alt="">
+   </div>
+   <div class="job-card__date">
+    <span class="job-card__published">5h ago</span>
+    <span class="job-card__working-time">Full Time</span>
+   </div>
+    <h3 class="job-card__title">Senior Software Engineer
+    </h3>
+   <span class="job-card__company-name">So Digital Inc.</span>
+   <p class="job-card__location">Remote, Seoul, Tokyo, Mountain View,
+   San Fransisco</p>
+  </div> -->
+ </main>
+ <script src="./app.js"></script>
 </body>
 </html>
