--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <div class="job-card__img">
     <img src="./assets/desktop/Group1.svg" alt="">
    </div>
+   <div class="job-card__text">
    <div class="job-card__date">
     <span class="job-card__published">5h ago</span>
     <span class="job-card__working-time">Full Time</span>
@@ -26,8 +27,10 @@
    <span class="job-card__company-name">So Digital Inc.</span>
    <p class="job-card__location">Remote, Seoul, Tokyo, Mountain View,
    San Fransisco</p>
+   </div>
   </div> -->
  </main>
+ <button class="btn container">Load More</button>
  <script src="./app.js"></script>
 </body>
 </html>
